--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,44 @@
 body {
     font-family: Arial, sans-serif;
-}
-
-h1 {
-    margin-top: 20px;
-    margin-bottom: 40px;
-}
-
-.image-thumbnails {
+    background-color: #f8f9fa;
+    padding-top: 20px;
+  }
+  
+  h1 {
+    margin-bottom: 15px;
+  }
+  
+  .thumbnail-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-gap: 10px;
     margin-bottom: 20px;
-}
-
-.img-thumbnail {
+  }
+  
+  .img-thumbnail {
     cursor: pointer;
-    width: 100%;
-}
-
-.meme-canvas {
-    position: relative;
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .text-inputs {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+  
+  .text-inputs input {
+    width: 48%;
+  }
+  
+  .button-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  canvas {
+    border: 1px solid #000;
+    display: block;
     margin-bottom: 20px;
-}
-
-canvas {
-    border: 1px solid black;
-}
-
-.text-inputs {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
-    margin-bottom: 20px;
-}
-
-button {
-    cursor: pointer;
-}
+  }
+  
