--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,54 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f8f9fa;
-    padding-top: 20px;
   }
   
-  h1 {
-    margin-bottom: 15px;
+  header {
+    background-color: #0da6ba;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  header img {
+    height: 15px;
+  }
+  
+  .container {
+    padding: 20px;
+  }
+  
+  .text-inputs {
+    margin-bottom: 10px;
+  }
+  
+  .text-inputs label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  .text-inputs input {
+    width: 100%;
+    padding: 5px;
+    font-size: 16px;
+  }
+  
+  .button-container {
+    margin-top: 10px;
   }
   
   .thumbnail-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-gap: 10px;
-    margin-bottom: 20px;
   }
   
   .img-thumbnail {
     cursor: pointer;
     max-width: 100%;
     height: auto;
-  }
-  
-  .text-inputs {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-  }
-  
-  .text-inputs input {
-    width: 48%;
-  }
-  
-  .button-container {
-    display: flex;
-    justify-content: space-between;
   }
   
   canvas {
